// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager #initialize gas cost 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 115375,
}
`;

exports[`PoolManager #lock gas overhead of no-op lock 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 41771,
}
`;

exports[`PoolManager #mint gas cost 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 309888,
}
`;

exports[`PoolManager #swap gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 70453,
}
`;

exports[`PoolManager #swap gas for swap against liquidity 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 202611,
}
`;

exports[`PoolManager bytecode size 1`] = `33589`;
